--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,16 +2,18 @@
 
 	<ItemGroup>
 		<PackageVersion Include="SvgPathProperties" Version="1.1.2" />
+		<PackageVersion Include="System.Net.Http" Version="4.3.4" />
 		<PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
 		<PackageVersion Include="GraphShape" Version="1.2.1" />
 		<PackageVersion Include="MatBlazor" Version="2.10.0" />
 		<PackageVersion Include="bunit" Version="1.36.0" />
 		<PackageVersion Include="FluentAssertions" Version="6.12.0" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+		<PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
 		<PackageVersion Include="xunit" Version="2.6.3" />
 		<PackageVersion Include="Moq" Version="[4.18.4]" />
-		<PackageVersion Include="xunit.runner.visualstudio" Version="2.5.5"/>
-		<PackageVersion Include="coverlet.collector" Version="6.0.0"/>
+		<PackageVersion Include="xunit.runner.visualstudio" Version="2.5.5" />
+		<PackageVersion Include="coverlet.collector" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
